Make the build info file get into the right directory

--- a/ci/Makefile
+++ b/ci/Makefile
@@ -79,7 +79,8 @@ release-gui: ../bin/coyim
 release-gui-linux: build-linux
 	mkdir -p ../release
 	cp ../bin/coyim ../release/coyim_$(shell go env GOOS)_$(shell go env GOARCH)
-	cp ../bin/build_info ../release/build_info
+	cp ../bin/coyim-cli ../release/coyim-cli_$(shell go env GOOS)_$(shell go env GOARCH)
+	cp ../bin/build_info ../release/build_info_$(shell go env GOOS)_$(shell go env GOARCH)
 	openssl dgst -sha256 ../release/coyim_$(shell go env GOOS)_$(shell go env GOARCH) >> ../release/checksum
 
 ../bin/coyim.exe:
