--- a/gui/Makefile
+++ b/gui/Makefile
@@ -1,8 +1,8 @@
 generate:
-	ruby ./generate.rb
+	go generate -x .
 
 touch:
-	ls *.xml | xargs -n1 touch
+	ls definitions/*.xml | xargs -n1 touch
 
 doctor: touch generate
 	git diff --exit-code .
