--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,14 @@ services:
 matrix:
   include:
     - go: 1.8.3
-      env: HOMEBREW_NO_AUTO_UPDATE=1
+      env:
+      - HOMEBREW_NO_AUTO_UPDATE=1
+      - DEPTESTBYPASS501=1
       os: osx
     - go: 1.9
-      env: HOMEBREW_NO_AUTO_UPDATE=1
+      env:
+      - HOMEBREW_NO_AUTO_UPDATE=1
+      - DEPTESTBYPASS501=1
       os: osx
     - go: 1.7.6
       env: RELEASE=true
