--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,8 @@ matrix:
 cache:
   directories:
     - $HOME/Library/Caches/Homebrew
+    - /usr/local/Homebrew/Library/Taps/homebrew
+    - /usr/local/Cellar/gtk+3
 
 before_install:
   - "export DISPLAY=:99.0"
