Change travis file to use new cmd

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ before_install:
   - "export DISPLAY=:99.0"
   - ci/install-deps-${TRAVIS_OS_NAME:-linux}
   - "export COYIM_PATH=$(pwd)/bin/coyim"
-install: make deps-dev
+install: make deps
 script: make -C ci/
 
 before_deploy: ci/release
