Added Dockerfile for debian buster
This commit introduce new make targets for building docker
images and reproducibly building coyim.
Now we have:

- `reproducible-linux-create-image-vivid`:  Creates a ubuntu vivid image
- `reproducible-linux-create-image-buster`: Creates a debian buster
  image
- `reproducible-linux-create-image`: Alias for
  `reproducible-linux-create-image-vivid`

- `reproducible-linux-build-vivid`: Builds coyim using the ubuntu vivid
  docker image
- `reproducible-linux-build-buster`: Builds coyim using the debian
  buster docker image
- `reproducible-linux-build`: Alias for `reproducible-linux-build-vivid`

Adding debian buster support is mainly for debugging why the coyim debian
package build is currently unreproducible (see
https://tests.reproducible-builds.org/debian/rb-pkg/buster/amd64/coyim.html).

--- a/reproducible/docker/Dockerfile.vivid
+++ b/reproducible/docker/Dockerfile.vivid
@@ -1,6 +1,6 @@
 FROM ubuntu:vivid
 
-ADD apt_preferences /etc/apt/preferences
+ADD vivid/apt_preferences /etc/apt/preferences
 
 RUN apt-get update && apt-get upgrade -y -o Dpkg::Options::="--force-confold"
 
