--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,10 @@ matrix:
   include:
     - go: 1.8.7
       os: osx
-      env: CGO_CFLAGS_ALLOW="-Wl,-framework"
+      env: CGO_CFLAGS_ALLOW="-Wl,(-framework|CoreFoundation)"
     - go: 1.9.4
       os: osx
-      env: CGO_CFLAGS_ALLOW="-Wl,-framework"
+      env: CGO_CFLAGS_ALLOW="-Wl,(-framework|CoreFoundation)"
     - go: 1.7.6
       env: RELEASE=true
       os: linux
