Disable goimports on go1.8 since that doesn't work either, these days

--- a/ci/Makefile
+++ b/ci/Makefile
@@ -16,6 +16,8 @@ ifeq ($(GO_VERSION), go1.6)
 	echo "Your version of Go is too old for running goimports. Skipping."
 else ifeq ($(GO_VERSION), go1.7)
 	echo "Your version of Go is too old for running goimports. Skipping."
+else ifeq ($(GO_VERSION), go1.8)
+	echo "Your version of Go is too old for running goimports. Skipping."
 else
 	go get -u golang.org/x/tools/cmd/goimports
 	goimports -w .
