--- a/reproducible/Makefile
+++ b/reproducible/Makefile
@@ -1,4 +1,4 @@
-BINDIR=$(PWD)/../bin
+BINDIR=../bin
 
 GIT_VERSION=$(shell git rev-parse HEAD)
 TAG_VERSION=$(shell git tag -l --contains $$GIT_VERSION | tail -1)
