--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -29,6 +29,9 @@ install:
 build_script:
   - SET PATH=C:\go19\bin;%PATH%
   - go version
+  - go env
+  - echo %PATH%
+  - dir %GOPASTH%
   - '%MSYS_PATH%\usr\bin\bash -lc "cd /c/gopath/src/github.com/coyim/coyim && make win-ci-deps"'
   - '%MSYS_PATH%\usr\bin\bash -lc "cd /c/gopath/src/github.com/coyim/coyim && make build-gui-win"'
 after_build:
