--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -33,7 +33,22 @@ after_build:
 artifacts:
   - path: coyim.zip
     name: CoyIM
-deploy_script:
-  - SET APPVEYOR_BUILD_VERSION=%APPVEYOR_REPO_BRANCH%
-  - if "%APPVEYOR_REPO_TAG%" == "true" set APPVEYOR_BUILD_VERSION=%APPVEYOR_REPO_TAG_NAME%
-  - curl -T coyim.zip -u "%BINTRAY_USER%:%BINTRAY_APIKEY%" "https://api.bintray.com/content/coyim/coyim-bin/coyim-bin/%APPVEYOR_BUILD_VERSION%/%APPVEYOR_BUILD_VERSION%/windows/CoyIM.zip?override=1&publish=1"
+deploy:
+- provider: BinTray
+  username: olabini
+  api_key:
+    secure: X2eHRabnZpixA+Oub12e3V+36sdrOTvbL+/dAB0pqWYGWYXqi+lcw5bLxjEuLTiZ
+  subject: coyim
+  repo: coyim-bin
+  package: windows
+  version: %APPVEYOR_REPO_TAG_NAME%
+  publish: true
+  override: true
+  explode: false
+  on:
+    APPVEYOR_REPO_TAG: true
+  
+# deploy_script:
+#   - SET APPVEYOR_BUILD_VERSION=%APPVEYOR_REPO_BRANCH%
+#   - if "%APPVEYOR_REPO_TAG%" == "true" set APPVEYOR_BUILD_VERSION=%APPVEYOR_REPO_TAG_NAME%
+#   - curl -T coyim.zip -u "%BINTRAY_USER%:%BINTRAY_APIKEY%" "https://api.bintray.com/content/coyim/coyim-bin/coyim-bin/%APPVEYOR_BUILD_VERSION%/%APPVEYOR_BUILD_VERSION%/windows/CoyIM.zip?override=1&publish=1"
