--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,9 +6,9 @@ environment:
     GOPATH: c:\gopath
     BINTRAY_PATH: coyim/coyim-bin/coyim-bin/windows
     BINTRAY_USER:
-      secure: HvXDg/3xn3Du2GPXPyf1tQ==
+      secure: h9afmV6qW6+IVP0M8ugyrg==
     BINTRAY_APIKEY:
-      secure: pKFoGMJ1yEvd9hI9yF8a7D5fp5xGt53GdSrV3/g2CVbWiUfNoAXyYzHC1R4jSUqQ
+      secure: X2eHRabnZpixA+Oub12e3V+36sdrOTvbL+/dAB0pqWYGWYXqi+lcw5bLxjEuLTiZ
   matrix:
     #- MSYS2_ARCH: x86_64
     #  MSYS2_BITS: 64
@@ -33,22 +33,21 @@ after_build:
 artifacts:
   - path: coyim.zip
     name: CoyIM
-deploy:
-- provider: BinTray
-  username: olabini
-  api_key:
-    secure: X2eHRabnZpixA+Oub12e3V+36sdrOTvbL+/dAB0pqWYGWYXqi+lcw5bLxjEuLTiZ
-  subject: coyim
-  repo: coyim-bin
-  package: windows
-  version: $(APPVEYOR_REPO_TAG_NAME)
-  publish: true
-  override: true
-  explode: false
-  on:
-    APPVEYOR_REPO_TAG: true
-  
-# deploy_script:
-#   - SET APPVEYOR_BUILD_VERSION=%APPVEYOR_REPO_BRANCH%
-#   - if "%APPVEYOR_REPO_TAG%" == "true" set APPVEYOR_BUILD_VERSION=%APPVEYOR_REPO_TAG_NAME%
-#   - curl -T coyim.zip -u "%BINTRAY_USER%:%BINTRAY_APIKEY%" "https://api.bintray.com/content/coyim/coyim-bin/coyim-bin/%APPVEYOR_BUILD_VERSION%/%APPVEYOR_BUILD_VERSION%/windows/CoyIM.zip?override=1&publish=1"
+# deploy:
+# - provider: BinTray
+#   username: olabini
+#   api_key:
+#     secure: X2eHRabnZpixA+Oub12e3V+36sdrOTvbL+/dAB0pqWYGWYXqi+lcw5bLxjEuLTiZ
+#   subject: coyim
+#   repo: coyim-bin
+#   package: windows
+#   version: $(APPVEYOR_REPO_TAG_NAME)
+#   publish: true
+#   override: true
+#   explode: false
+#   on:
+#     APPVEYOR_REPO_TAG: true
+deploy_script:
+  - SET APPVEYOR_BUILD_VERSION=%APPVEYOR_REPO_BRANCH%
+  - if "%APPVEYOR_REPO_TAG%" == "true" set APPVEYOR_BUILD_VERSION=%APPVEYOR_REPO_TAG_NAME%
+  - curl -T coyim.zip -u "%BINTRAY_USER%:%BINTRAY_APIKEY%" "https://api.bintray.com/content/coyim/coyim-bin/coyim-bin/%APPVEYOR_BUILD_VERSION%/%APPVEYOR_BUILD_VERSION%/windows/CoyIM.zip?override=1&publish=1"
