--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -26,8 +26,7 @@ environment:
 install:
   - .\ci\install-deps-windows.bat
 build_script:
-  - '%MSYS_PATH%\usr\bin\bash -lc "cd /c/gopath/src/github.com/coyim/coyim && make win-ci-deps"'
-  - '%MSYS_PATH%\usr\bin\bash -lc "cd /c/gopath/src/github.com/coyim/coyim && make build-gui-win"'
+  - .\ci\build-windows.bat
 after_build:
   - .\ci\build-windows-bundle.bat
 artifacts:
