--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -26,7 +26,8 @@ environment:
 install:
   - .\ci\install-deps-windows.bat
 build_script:
-  - .\ci\build-windows.bat
+  - '%MSYS_PATH%\usr\bin\bash -lc "cd /c/gopath/src/github.com/coyim/coyim && make win-ci-deps"'
+  - '%MSYS_PATH%\usr\bin\bash -lc "cd /c/gopath/src/github.com/coyim/coyim && make build-gui-win"'
 after_build:
   - .\ci\build-windows-bundle.bat
 artifacts:
