Change the import path for golint, since it's enforced on Go1.12

--- a/development/Makefile
+++ b/development/Makefile
@@ -48,7 +48,7 @@ ifeq ($(GO_VERSION), go1.7)
 else ifeq ($(GO_VERSION), go1.8)
 	echo "$(GO_VERSION) is not a supported Go release. Skipping golint."
 else
-	go get -u github.com/golang/lint/golint
+	go get -u golang.org/x/lint/golint
 endif
 
 deps: dep-supported-only
@@ -83,4 +83,3 @@ clean-cover:
 # generats an HTML report with coverage information
 cover: run-cover
 	go tool cover -html=../.coverprofiles/gover.coverprofile
-
