--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -44,3 +44,7 @@
 [[constraint]]
   name = "github.com/sirupsen/logrus"
   version = "1.6.0"
+
+[[constraint]]
+  name = "golang.org/x/text"
+  version = "0.3.2"
