--- a/ci/Makefile
+++ b/ci/Makefile
@@ -35,7 +35,7 @@ mac-bundle:
 release-dmg: clean-mac-bundle mac-bundle
 	mkdir -p ../release
 	ln -s /Applications ../bin/mac-bundle/Applications
-	cp ../build/mac-bundle/ds-store ../bin/mac-bundle/.DS_Store
+#	cp ../build/mac-bundle/ds-store ../bin/mac-bundle/.DS_Store
 	./make-dmg coyim ../bin/mac-bundle ../release/coyim.dmg
 	openssl dgst -sha256 ../release/coyim.dmg >> ../release/checksum
 
