Use the create-dmg tool to make it easier to create the DMG, with icons and application link and so on

--- a/ci/Makefile
+++ b/ci/Makefile
@@ -34,9 +34,8 @@ mac-bundle:
 
 release-dmg: clean-mac-bundle mac-bundle
 	mkdir -p ../release
-	ln -s /Applications ../bin/mac-bundle/Applications
-#	cp ../build/mac-bundle/ds-store ../bin/mac-bundle/.DS_Store
-	./make-dmg coyim ../bin/mac-bundle ../release/coyim.dmg
+	create-dmg --volname "CoyIM Installer" --volicon ../build/mac-bundle/coyim.icns --window-pos 200 120 --window-size 800-400 --icon-size 100 --custom-icon "CoyIM.app" ../build/mac-bundle/coyim.icns 200 190 --hide-extension "CoyIM.app" --app-drop-link 600 185 ../release/coyim.dmg bin/mac-bundle/CoyIM.app
+	fileicon set ../release/coyim.dmg ../build/mac-bundle/coyim.icns
 	openssl dgst -sha256 ../release/coyim.dmg >> ../release/checksum
 
 ../bin/coyim:
