Add proper support for validation of JID localparts and resourceparts, properly following the specifications correctly

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -52,3 +52,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/coyim/gotk3osx"
+
+[[constraint]]
+  name = "github.com/xdg/stringprep"
+  version = "1.0.0"
