--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -56,3 +56,7 @@
 [[constraint]]
   name = "github.com/xdg/stringprep"
   version = "1.0.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/golang-collections/collections"
