Part of #692 - try to install Homebrew dependencies using the Travis addon instead of manual scripting.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,10 @@ go:
 services:
   - docker
 
+addons:
+  homebrew:
+    brewfile: ci/Brewfile.travis
+    
 matrix:
   include:
     - go: "1.13.11"
