--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,13 @@ services:
 addons:
   homebrew:
     brewfile: ci/Brewfile.travis
+  apt:
+    packages:
+      - libgtk-3-dev
+      - gettext
+      - libglib2.0-dev
+      - libc6-dev-i386
+      - xvfb
     
 matrix:
   include:
@@ -39,9 +46,9 @@ matrix:
   fast_finish: true
 
 # Maybe cache /usr/local instead ?
-cache:
-  directories:
-    - $HOME/Library/Caches/Homebrew
+#cache:
+#  directories:
+#    - $HOME/Library/Caches/Homebrew
 
 before_install:
   - "export DISPLAY=:99.0"
