--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ services:
 addons:
   homebrew:
     brewfile: ci/Brewfile.travis
+#    update: true
   apt:
     packages:
       - libgtk-3-dev
@@ -29,6 +30,8 @@ addons:
       - libglib2.0-dev
       - libc6-dev-i386
       - xvfb
+
+osx_image: xcode10.1
 
 jobs:
   include:
