--- a/.travis.yml
+++ b/.travis.yml
@@ -21,17 +21,7 @@ services:
 
 addons:
   homebrew:
-    packages:
-      - "gtk+3"
-      - "gettext"
-      - "adwaita-icon-theme"
-      - "hicolor-icon-theme"
-      - "shared-mime-info"
-      - "libffi"
-      - "gtk-mac-integration"
-      - "create-dmg"
-      - "fileicon"
-      - "pkg-config"
+    brewfile: ci/Brewfile.travis
   apt:
     packages:
       - libgtk-3-dev
@@ -40,7 +30,7 @@ addons:
       - libc6-dev-i386
       - xvfb
 
-osx_image: xcode10.1
+osx_image: xcode11.3
 
 jobs:
   include:
