Part of #692, make it possible to add a build prefix to all the Go builds, and then use that to add the travis_wait command

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,7 @@ jobs:
 
 before_install:
   - "export DISPLAY=:99.0"
+  - "export BUILD_RUN_PREFIX=travis_wait"
   - ci/install-deps-${TRAVIS_OS_NAME:-linux}
   - "export COYIM_PATH=$(pwd)/bin/coyim"
 install: make -C ci/ deps
