--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -8,15 +8,25 @@ jobs:
     
     strategy:
       matrix:
-        go: [ '1.14', '1.13' , '1.12', '1.11' ]
+        go: [ '1.15', '1.14', '1.13', '1.12', '1.11' ]
 
     name: CoyIM go-${{ matrix.go }} test
     steps:
-      - name: install dependencies
+      - name: install OS dependencies
         run: sudo apt-get install libgtk-3-dev gettext libglib2.0-dev libc6-dev-i386 xvfb
       - name: checkout
         uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go }}
-      - run: go version
+      - name: install project dependencies
+        run: make -C ci/ deps
+        env:
+          DISPLAY: ':99.0'
+      - name: run tests
+        run: make -C ci/
+        env:
+          DISPLAY: ':99.0'
+
+
+# we need a release job for linux, with RELEASE=true
