Part of #694, add some debugging to see what's going on

--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -23,6 +23,8 @@ jobs:
         run: make -C ci/ deps
         env:
           DISPLAY: ':99.0'
+      - run: ls -alF $GOPATH
+      - run: ls -alF $GOPATH/bin
       - name: run tests
         run: make -C ci/
         env:
