Part of #694, even more Github Actions debugging...

--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -23,8 +23,10 @@ jobs:
         run: make -C ci/ deps
         env:
           DISPLAY: ':99.0'
-      - run: ls -alF $GOPATH
-      - run: ls -alF $GOPATH/bin
+        
+      - run: ls -alF /home/runner/go
+      - run: ls -alF /home/runner/go/bin
+      - run: go env
       - name: run tests
         run: make -C ci/
         env:
