--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -5,20 +5,30 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-16.04
-    
+
+    env:
+      GOPATH: ${{ github.workspace }}
+      GO111MODULE: off
+    defaults:
+      run:
+        working-directory: ${{ env.GOPATH }}/src/github.com/${{ github.repository }}
+        
     strategy:
       matrix:
-        go: [ '1.15', '1.14', '1.13', '1.12', '1.11' ]
+        go: [ '1.15' ]
+#        go: [ '1.15', '1.14', '1.13', '1.12', '1.11' ]
 
     name: CoyIM go-${{ matrix.go }} test
     steps:
       - name: install OS dependencies
         run: sudo apt-get install libgtk-3-dev gettext libglib2.0-dev libc6-dev-i386 xvfb
-      - name: checkout
-        uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go }}
+      - name: checkout
+        uses: actions/checkout@v2
+        with:
+          path: ${{ env.GOPATH }}/src/github.com/${{ github.repository }}        
       - name: install project dependencies
         run: make -C ci/ deps
         env:
